--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "axios": "^1.11.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "mysql2": "^3.14.3",
     "nodemon": "^3.1.10",
     "sequelize": "^6.37.7",
     "swagger-ui-express": "^5.0.1"
-  }
+  },
+  "type": "module"
 }
